--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 
   <script>
-    const apiUrl = 'https://682d80954fae188947563a4f.mockapi.io/data';
+    const apiUrl = 'https://682d80954fae188947563a4f.mockapi.io/newdata500';
     let customers = [];
 
     // Lấy dữ liệu và render bảng
